tests added, update files' initialization